--- a/staffs.html
+++ b/staffs.html
@@ -577,6 +577,24 @@
                         </div>
                     </div>
 
+                     <div class="b">
+                        <div class="one img3"></div>
+                        <div class="two">
+                            <h3>Miss: Rubina Khan</h3>
+                            <span>
+                                <div class="icons quali">
+                                </div> <b>&nbsp;&nbsp;&nbsp;&nbsp;Master's in Ecomonics</b>
+                            </span>
+
+                            <span>
+                                <div class=" icons subs">
+                                </div> &nbsp;&nbsp;&nbsp;Marathi
+                            </span>
+                            Class 6th to 10th with excellent knowledge of marathi.
+                            </p>
+                        </div>
+                    </div>
+
                     <div class="b">
                         <div class="one img4"></div>
                         <div class="two">
@@ -849,7 +867,7 @@
                     <div class="b ">
                         <div class="one img2"></div>
                         <div class="two">
-                            <h3>Miss: Rubina Khan</h3>
+                            <h3>Miss: pqr</h3>
                             <br>
                             <span>
                                 <div class="icons quali">
