--- a/staffs.html
+++ b/staffs.html
@@ -577,6 +577,8 @@
                         </div>
                     </div>
 
+                    
+
                      <div class="b">
                         <div class="one img3"></div>
                         <div class="two">
@@ -816,7 +818,7 @@
                     <div class="b">
                         <div class="one img3"></div>
                         <div class="two">
-                            <h3>Miss: Aziza Khan</h3>
+                            <h3>Miss: Aziza Sheikh </h3>
                             <span>
                                 <div class="icons quali">
                                 </div> <b>&nbsp;&nbsp;&nbsp;&nbsp;Msc .IT</b>
@@ -867,7 +869,7 @@
                     <div class="b ">
                         <div class="one img2"></div>
                         <div class="two">
-                            <h3>Miss: pqr</h3>
+                            <h3>Miss: Pinky Taai</h3>
                             <br>
                             <span>
                                 <div class="icons quali">
