--- a/index.html
+++ b/index.html
@@ -1357,7 +1357,7 @@
             sint, quam expedita!"
 
             <div class="parioc p1 bbbb"></div>
-            Mr.John the don
+            Mr. Ash Yadav
 
         </div>
         <div class="parentswords">"Lorem ipsum dolor sit amet consectetur, adipisicing elit. Impedit atque quos
@@ -1381,7 +1381,7 @@
     </div>
 
     <div class="parentshed">
-        <h5>Developted By John the Don</h5>
+        <h5>Developted By Ash Yadav</h5>
     </div>
 
 
