--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     <script src="https://smtpjs.com/v3/smtp.js"></script>
 
-    <title>twinklestarenglishhighschool</title>
+    <title>theambassadorhighschool</title>
 
     <style>
         * {
@@ -1005,7 +1005,7 @@
 
     <div class="mobilenav">
 
-        <h2 class="mobilenavschname">Twinkle Star English High School</h2>
+        <h2 class="mobilenavschname">The Ambassador High School</h2>
         <label for="mobinavigation" id="cutmobile">
             <h4>X</h4>
         </label>
@@ -1065,7 +1065,7 @@
     </div>
     <div class="man">
         <div class="headng">
-            <h1 class="namee" style="text-align: center;">Twinkle Star English High School</h1>
+            <h1 class="namee" style="text-align: center;">The Ambassador High School</h1>
         </div>
 
 
@@ -1099,7 +1099,7 @@
                 <div class="iconssbox colorrr">
                     <i class="fi fi-brands-twitter "></i>
 
-                    <a href="https://www.youtube.com/@twinklestarenglishhighscho6817" target="_blank"><i
+                    <a href="https://www.youtube.com/@twinklestarenglishhighscho67" target="_blank"><i
                             class="fi fi-brands-youtube"></i></a>
 
                     <i class="fi fi-brands-whatsapp"></i>
