--- a/index.html
+++ b/index.html
@@ -1173,7 +1173,7 @@
         <div class="carousel-wrapper">
             <div class="carousel-item">
                 <div class="iconone"
-                    style="background-image: url('images/sukantnayaksir.png'); transform: rotate(-5deg);">
+                    style="background-image: url('images/teacherone.png'); transform: rotate(-5deg);">
 
                 </div>
 
@@ -1185,7 +1185,7 @@
 
 
                 <span>
-                    <h3>Founder: Mr. Sukant Nayak</h3><br>
+                    <h3>Founder: Mr. Shuan Fernandes</h3><br>
                     <p class="words">"We focus on innovation in education,
                         indicating that it continually seeks new
                         ways to educate students, ultimately leading to their elevation in all aspects of life."</p>
@@ -1201,7 +1201,7 @@
                 </div>
 
                 <span>
-                    <h3>Co-Founder: Miss. Saniya Nayak</h3><br>
+                    <h3>Co-Founder: Miss. Molly Fernandes</h3><br>
                     <p class="words">"Each student's educational journey is personalized, with the school's support,
                         leading to their individualized success."</p>
                 </span>
@@ -1216,7 +1216,7 @@
                 </div>
 
                 <span>
-                    <h3>Vice-Princple: Miss XYZ</h3><br>
+                    <h3>Vice-Princple: Miss Supriya</h3><br>
                     <p class="words">"The school's commitment to imparting not just knowledge but also wisdom and
                         strong moral character in students, emphasizing the holistic nature of education."</p>
                 </span>
