--- a/staffs.html
+++ b/staffs.html
@@ -123,7 +123,7 @@
 
 
         .img1 {
-            background-image: url("images/sukantnayaksir.png");
+            background-image: url("images/");
             background-size: 110px;
         }
 
@@ -462,7 +462,7 @@
         </div>
     </div>
     <div class="schoolname">
-        <h1>Twinkle Star English High School</h1>
+        <h1>The Ambassador High School</h1>
     </div>
 
     <div class="quotes">
@@ -510,7 +510,7 @@
                     <div class="b">
                         <div class="one img1"></div>
                         <div class="two">
-                            <h3>Sir: Sukant Nayak</h3>
+                            <h3>Sir: Rohit Rathor</h3>
                             <br>
                             <span>
                                 <div class="icons quali">
@@ -529,7 +529,7 @@
                     <div class="b ">
                         <div class="one img2"></div>
                         <div class="two">
-                            <h3>Miss: Saniya Nayak</h3>
+                            <h3>Miss: Pooja Deshpanday</h3>
                             <br>
                             <span>
                                 <div class="icons quali">
@@ -600,7 +600,7 @@
                     <div class="b">
                         <div class="one img4"></div>
                         <div class="two">
-                            <h3>Sir: Sandeep Yadav</h3>
+                            <h3>Sir: Mandeep Singh</h3>
                             <span>
                                 <div class="icons quali">
                                 </div> <b>&nbsp;&nbsp;&nbsp;&nbsp;Bsc in Chemistry</b>
