--- a/staffs.html
+++ b/staffs.html
@@ -123,7 +123,7 @@
 
 
         .img1 {
-            background-image: url("images/");
+            background-image: url("images/teacherone.png");
             background-size: 110px;
         }
 
