--- a/contactus.html
+++ b/contactus.html
@@ -375,7 +375,7 @@
         </div>
     </div>
     <div class="schoolname">
-        <h1>Twinkle Star English High School</h1>
+        <h1>The Ambassador High School</h1>
     </div>
 
     <div class="quotes">
