--- a/index.html
+++ b/index.html
@@ -1394,7 +1394,7 @@
                         401208, Maharashtra</p><br>
                     <p><i class="fi fi-sr-phone-call"></i>
                         8080694522/9156960791</p><br>
-                    <p> <i class="fi fi-sr-envelope-dot"></i> twinklestarenglishhighschool@gmail.com</p>
+                    <p> <i class="fi fi-sr-envelope-dot"></i> theambassadorhighschool@gmail.com</p>
                 </div>
                 <br>
                 <div class="rightfooter">
@@ -1414,7 +1414,7 @@
 
             </div>
             <br>
-            <div class="margingfooter"> © 2023 Twikle Star English High School. All Rights Reserved</div>
+            <div class="margingfooter"> © 2023 The Ambassador High School. All Rights Reserved</div>
 
         </div>
 
