--- a/contactus.html
+++ b/contactus.html
@@ -425,7 +425,7 @@
                         401208, Maharashtra</p><br>
                     <p><i class="fi fi-sr-phone-call"></i>
                         8080694522&nbsp;/&nbsp;9156960791</p><br>
-                    <p> <i class="fi fi-sr-envelope-dot"></i> twinklestarenglishhighschool@gmail.com</p>
+                    <p> <i class="fi fi-sr-envelope-dot"></i> theambassdorhighschool@gmail.com</p>
                 </div>
                 <br>
                 <div class="rightfooter">
@@ -445,7 +445,7 @@
 
             </div>
             <br>
-            <div class="margingfooter"> © 2023 Twikle Star English High School. All Rights Reserved</div>
+            <div class="margingfooter"> © 2023 The Ambassador High School. All Rights Reserved</div>
         </div>
 
 
